syntax = "proto3";

option csharp_namespace = "BookshopServer";

message Book {
  string title = 1;
  string author = 2;
  int32 page_count = 3;
  optional string language = 4;
}

message GetBookListRequest {}
message GetBookListResponse { repeated Book books = 1; }
message GetBookDetailByIdRequest { int32 id = 1; }
message GetBookDetailByIdResponse { Book bookDetail = 1; }

service Inventory {
  rpc GetBookList(GetBookListRequest) returns (GetBookListResponse) {}

  rpc GetBookDetailById(GetBookDetailByIdRequest)
      returns (GetBookDetailByIdResponse) {}
}
